# lambda2ski

./: LICENSE  README.md  lambda2ski.cabal  sample.context  stack.yaml
app/: Main.hs
src/: CLI.hs  Expr.hs  PPrint.hs  Parser.hs
test/: Spec.hs  sample.context
