name:                lambda2ski
version:             0.1.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/todays-mitsui/lambda2ski#readme
license:             MIT
license-file:        LICENSE
author:              Mitsui
maintainer:          todays.mitsui@gmail.com
copyright:           2016 Mitsui
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CLI
                     , Expr
                     , Parser
                     , PPrint
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , parsec3
                     , mtl
                     , optparse-declarative
  default-language:    Haskell2010

executable ski
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda2ski
                     , bytestring
                     , containers
                     , parsec3
                     , mtl
                     , optparse-declarative
  default-language:    Haskell2010

test-suite ski-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , lambda2ski
                     , bytestring
                     , containers
                     , parsec3
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Unlambdify
